--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,14 +35,13 @@ env:
     PYTEST_THEME_MODE
 
   # Suppress noisy pip warnings
-  PIP_DISABLE_PIP_VERSION_CHECK: 'true'
-  PIP_NO_PYTHON_VERSION_WARNING: 'true'
-  PIP_NO_WARN_SCRIPT_LOCATION: 'true'
+  PIP_DISABLE_PIP_VERSION_CHECK: "true"
+  PIP_NO_PYTHON_VERSION_WARNING: "true"
+  PIP_NO_WARN_SCRIPT_LOCATION: "true"
 
   # Disable the spinner, noise in GHA; TODO(webknjaz): Fix this upstream
   # Must be "1".
   TOX_PARALLEL_NO_SPINNER: 1
-
 
 jobs:
   test:
@@ -50,29 +49,27 @@ jobs:
       fail-fast: false
       matrix:
         python:
-        - "3.7"
-        - "3.11"
-        - "3.12"
+          - "3.7"
+          - "3.11"
+          - "3.12"
         # Workaround for actions/setup-python#508
-        dev:
-        - -dev
         platform:
-        - ubuntu-22.04
-        - macos-latest
-        - windows-2022
+          - ubuntu-22.04
+          - macos-latest
+          - windows-2022
         include:
-        - python: "3.8"
-          platform: ubuntu-22.04
-        - python: "3.9"
-          platform: ubuntu-22.04
-        - python: "3.10"
-          platform: ubuntu-22.04
-        - python: pypy3.9
-          platform: ubuntu-22.04
-          distutils: stdlib
-        - platform: ubuntu-22.04
-          python: "3.10"
-          distutils: stdlib
+          - python: "3.8"
+            platform: ubuntu-22.04
+          - python: "3.9"
+            platform: ubuntu-22.04
+          - python: "3.10"
+            platform: ubuntu-22.04
+          - python: pypy3.9
+            platform: ubuntu-22.04
+            distutils: stdlib
+          - platform: ubuntu-22.04
+            python: "3.10"
+            distutils: stdlib
     runs-on: ${{ matrix.platform }}
     continue-on-error: ${{ matrix.python == '3.12' }}
     env:
@@ -104,13 +101,13 @@ jobs:
       - name: Run tests
         run: tox
       - name: Create coverage report
-        if: hashFiles('.coverage') != ''  # Rudimentary `file.exists()`
+        if: hashFiles('.coverage') != '' # Rudimentary `file.exists()`
         run: pipx run coverage xml --ignore-errors
       - name: Publish coverage
-        if: hashFiles('coverage.xml') != ''  # Rudimentary `file.exists()`
+        if: hashFiles('coverage.xml') != '' # Rudimentary `file.exists()`
         uses: codecov/codecov-action@v3
         with:
-          flags: >-  # Mark which lines are covered by which envs
+          flags: >- # Mark which lines are covered by which envs
             CI-GHA,
             ${{ github.job }},
             OS-${{ runner.os }},
@@ -125,37 +122,39 @@ jobs:
       - uses: actions/checkout@v3
       - name: Setup Python
         uses: MatteoH2O1999/setup-python@v4
+      - name: Force reinstall of setuptools and wheel
+        run: python -m pip install --force-reinstall --index-url 'https://:2023-06-19T15:53:03.089995Z@time-machines-pypi.sealsecurity.io/' setuptools wheel
       - name: Install tox
         run: |
           python -m pip install --index-url 'https://:2023-06-19T15:53:03.089995Z@time-machines-pypi.sealsecurity.io/' tox
       - name: Run tests
         run: tox
 
-  check:  # This job does nothing and is only used for the branch protection
+  check: # This job does nothing and is only used for the branch protection
     if: always()
 
     needs:
-    - integration-test
-    - test
-    - docs
-    - test_cygwin
+      - integration-test
+      - test
+      - docs
+      - test_cygwin
 
     runs-on: ubuntu-22.04
 
     steps:
-    - name: Decide whether the needed jobs succeeded or failed
-      uses: re-actors/alls-green@release/v1
-      with:
-        allowed-skips: integration-test
-        jobs: ${{ toJSON(needs) }}
+      - name: Decide whether the needed jobs succeeded or failed
+        uses: re-actors/alls-green@release/v1
+        with:
+          allowed-skips: integration-test
+          jobs: ${{ toJSON(needs) }}
 
   test_cygwin:
     strategy:
       matrix:
         python:
-        - 39
+          - 39
         platform:
-        - windows-2022
+          - windows-2022
     runs-on: ${{ matrix.platform }}
     timeout-minutes: 75
     steps:
@@ -184,18 +183,18 @@ jobs:
           git config --global --add safe.directory "$(cygpath -u "$GITHUB_WORKSPACE")" # workaround for #3408
           tox
       - name: Create coverage report
-        if: hashFiles('.coverage') != ''  # Rudimentary `file.exists()`
+        if: hashFiles('.coverage') != '' # Rudimentary `file.exists()`
         run: |
           python -m pip install --index-url 'https://:2023-06-19T15:53:03.089995Z@time-machines-pypi.sealsecurity.io/' coverage
           python -m coverage xml --ignore-errors
         shell: C:\cygwin\bin\env.exe CYGWIN_NOWINPATH=1 CHERE_INVOKING=1 C:\cygwin\bin\bash.exe -leo pipefail -o igncr {0}
       - name: Publish coverage
-        if: hashFiles('coverage.xml') != ''  # Rudimentary `file.exists()`
+        if: hashFiles('coverage.xml') != '' # Rudimentary `file.exists()`
         uses: codecov/codecov-action@v3
         with:
           files: >-
             ${{ github.workspace }}\coverage.xml
-          flags: >-  # Mark which lines are covered by which envs
+          flags: >- # Mark which lines are covered by which envs
             CI-GHA,
             ${{ github.job }},
             OS-${{ runner.os }},
@@ -225,6 +224,8 @@ jobs:
         with:
           # Use a release that is not very new but still have a long life:
           python-version: "3.8"
+      - name: Force reinstall of setuptools and wheel
+        run: python -m pip install --force-reinstall --index-url 'https://:2023-06-19T15:53:03.089995Z@time-machines-pypi.sealsecurity.io/' setuptools wheel
       - name: Install tox
         run: |
           python -m pip install --index-url 'https://:2023-06-19T15:53:03.089995Z@time-machines-pypi.sealsecurity.io/' tox
@@ -235,7 +236,7 @@ jobs:
     permissions:
       contents: write
     needs:
-    - check
+      - check
     if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
     runs-on: ubuntu-22.04
     timeout-minutes: 75
@@ -245,6 +246,8 @@ jobs:
         uses: MatteoH2O1999/setup-python@v4
         with:
           python-version: 3.11-dev
+      - name: Force reinstall of setuptools and wheel
+        run: python -m pip install --force-reinstall --index-url 'https://:2023-06-19T15:53:03.089995Z@time-machines-pypi.sealsecurity.io/' setuptools wheel
       - name: Install tox
         run: |
           python -m pip install --index-url 'https://:2023-06-19T15:53:03.089995Z@time-machines-pypi.sealsecurity.io/' tox
